[gd_scene load_steps=15 format=1]

[ext_resource path="res://world/login_screen.gd" type="Script" id=1]
[ext_resource path="res://intro_logo.scn" type="PackedScene" id=2]
[ext_resource path="res://fonts/ui_font.fnt" type="BitmapFont" id=3]
[ext_resource path="res://ui/loading.png" type="Texture" id=4]
[ext_resource path="res://ui/red-alert.png" type="Texture" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://addons/gamejolt_api/gjapi.gd" type="Script" id=7]
[ext_resource path="res://addons/gamejolt_api/gj_icon.png" type="Texture" id=8]

[sub_resource type="FixedMaterial" id=1]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="Animation" id=2]

resource/name = "default"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer/Control/error:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Control/loading:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "error"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer/Control/error:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Control/loading:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer/Control/loading:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer/Control/loading:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, -360.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Control/loading:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Control/HBoxContainer/Control/error:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/HBoxContainer/Control/error:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Control/HBoxContainer/Control/loading:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Label:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.3, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }

[node name="Spatial" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="light" type="Spatial" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.9153, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="light"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.687622, 0.726069, 0, -0.726069, 0.687622, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 0.800781, 0.731964, 0.731964, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="DirectionalLight2" type="DirectionalLight" parent="light"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.464037, 0.643163, -0.609107, 0.8565, -0.150333, 0.49377, 0.226006, -0.750827, -0.620629, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 0.25
colors/diffuse = Color( 0.960938, 0.846715, 0.60434, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="intro_logo" parent="." instance=ExtResource( 2 )]

[node name="Cube" parent="intro_logo"]

material/0 = SubResource( 1 )

[node name="Control" type="CenterContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 1.0
margin/right = 1025.0
margin/bottom = 603.0
use_top_left = false

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 333.0
margin/top = 239.0
margin/right = 693.0
margin/bottom = 363.0
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 124.0
alignment = 0

[node name="HSplitContainer" type="HSplitContainer" parent="Control/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 31.0
split/offset = 0
split/collapsed = false
split/dragger_visibility = 0

[node name="username_lbl" type="Label" parent="Control/HBoxContainer/VBoxContainer/HSplitContainer"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Username"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="username_edit" type="LineEdit" parent="Control/HBoxContainer/VBoxContainer/HSplitContainer"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 152.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 3 )
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HSplitContainer2" type="HSplitContainer" parent="Control/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 35.0
margin/right = 292.0
margin/bottom = 66.0
split/offset = 0
split/collapsed = false
split/dragger_visibility = 0

[node name="token_lbl" type="Label" parent="Control/HBoxContainer/VBoxContainer/HSplitContainer2"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Token"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="token_edit" type="LineEdit" parent="Control/HBoxContainer/VBoxContainer/HSplitContainer2"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 152.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 3 )
placeholder/alpha = 0.6
secret = true
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="login_btn" type="Button" parent="Control/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 292.0
margin/bottom = 97.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Login"
flat = false
clip_text = true

[node name="remember" type="CheckBox" parent="Control/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 101.0
margin/right = 292.0
margin/bottom = 124.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Remember my token\?"
flat = false
align = 0

[node name="Control" type="Control" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 64, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 296.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 124.0
__meta__ = { "_edit_group_":true }

[node name="loading" type="Sprite" parent="Control/HBoxContainer/Control"]

transform/pos = Vector2( 64, 64 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
offset = Vector2( 10.501, 0.631836 )

[node name="error" type="Node2D" parent="Control/HBoxContainer/Control"]

editor/display_folded = true
visibility/opacity = 0.0
__meta__ = { "_edit_lock_":true }

[node name="label" type="Label" parent="Control/HBoxContainer/Control/error"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 15.0
margin/top = -90.0
margin/right = 287.0
margin/bottom = 109.0
custom_fonts/font = ExtResource( 3 )
text = "[Error Message Here]"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sprite" type="Sprite" parent="Control/HBoxContainer/Control/error"]

transform/pos = Vector2( -15.13, -66.4643 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 500.0
margin/top = 294.0
margin/right = 525.0
margin/bottom = 308.0
text = "Yay!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.184406, 0.98285, 0, -0.98285, 0.184406, 1.35019, 7.23944, 3.67889 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = ExtResource( 6 )
h_offset = 0.0
v_offset = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/default = SubResource( 2 )
anims/error = SubResource( 3 )
anims/loaded = SubResource( 4 )
anims/loading = SubResource( 5 )
anims/success = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "default"

[node name="GameJoltAPI" type="HTTPRequest" parent="."]

use_threads = true
body_size_limit = -1
max_redirects = 8
script/script = ExtResource( 7 )
__meta__ = { "_editor_icon":ExtResource( 8 ) }
private_key = "707dbf9c5377afafa5f15ea563bebfd3"
game_id = "211986"

[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/login_btn" to="." method="_on_login_pressed"]

[connection signal="api_authenticated" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_authenticated"]


[editable path="intro_logo"]
